# game

./: .gitignore  CMakeLists.txt
config/: animations.json
src/: main.cpp
src/components/: aabb.h  animate.h  facing.h  idle.h  input.h  rect-shape.h  renderable.h  sprite.h  transform.h
src/core/: asset-manager.cpp  asset-manager.h  component-array.h  component-manager.h  coordinator.cpp  coordinator.h  entity-manager.cpp  entity-manager.h  system-manager.h  system.h  types.h
src/game/: action.h  game-engine.cpp  game-engine.h  scene-play.cpp  scene-play.h  scene.cpp  scene.h
src/math/: vec2.cpp  vec2.h
src/systems/: animate.cpp  animate.h  collision.cpp  collision.h  idle.cpp  idle.h  movement.cpp  movement.h  player-animation.cpp  player-animation.h  render-aabb.cpp  render-aabb.h  render-sprite.cpp  render-sprite.h
